--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
+:root {
+  --yellow: #f4d04e;
+  --gray-500: #6b6b6b;
+  --gray-950: #111111;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,9 +18,8 @@ body {
   justify-content: center;
 
   height: 100vh;
-  margin: 0;
 
-  background-color: #f4d04e;
+  background-color: var(--yellow);
 }
 
 .card-container {
@@ -51,12 +56,12 @@ body {
   font-family: "Figtree", sans-serif;
   font-size: 12px;
   font-weight: 800;
-  background-color: #f4d04e;
+  background-color: var(--yellow);
   line-height: 150%;
   letter-spacing: normal;
 
   border-radius: 4px;
-  color: #111111;
+  color: var(--gray-950);
 }
 
 .card-publish-date {
@@ -66,7 +71,7 @@ body {
   line-height: 150%;
   letter-spacing: normal;
 
-  color: #111111;
+  color: var(--gray-950);
 }
 
 .card-title {
@@ -76,7 +81,7 @@ body {
   line-height: 150%;
   letter-spacing: normal;
 
-  color: #111111;
+  color: var(--gray-950);
 
   margin: 0;
 }
@@ -87,7 +92,7 @@ body {
   line-height: 150%;
   letter-spacing: normal;
 
-  color: #6b6b6b;
+  color: var(--gray-500);
 }
 
 .card-author {
@@ -109,18 +114,17 @@ body {
   font-weight: 800;
   line-height: 150%;
   letter-spacing: normal;
+  color: var(--gray-500);
 }
 
 @media screen and (min-width: 1025px) {
   .card-container {
-    width: 528px;
+    width: 384px;
   }
 
-  .card-category {
-    font-size: 14px;
-  }
-
-  .card-publish-date {
+  .card-category,
+  .card-publish-date,
+  .card-description {
     font-size: 14px;
   }
 
@@ -131,9 +135,5 @@ body {
   .card-title:hover {
     color: #f4d04e;
     cursor: pointer;
-  }
-
-  .card-description {
-    font-size: 14px;
   }
 }
