--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --yellow: #f4d04e;
   --gray-500: #6b6b6b;
   --gray-950: #111111;
+  --white: #ffffff;
 }
 
 * {
@@ -24,25 +25,25 @@ body {
 
 .card-container {
   border: 1px solid black;
-  border-radius: 20px;
-  background-color: white;
+  border-radius: 1.25rem;
+  background-color: var(--white);
   box-shadow: 8px 8px 0px 0px;
 
-  width: 327px;
+  width: 20rem;
   padding: 2rem;
 }
 
 .card-image img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
 .card-content {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0.75rem;
 
-  margin-top: 24px;
+  margin-top: 1.5rem;
 }
 
 .card-category {
@@ -54,11 +55,11 @@ body {
   height: 29px;
 
   font-family: "Figtree", sans-serif;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 800;
   background-color: var(--yellow);
   line-height: 150%;
-  letter-spacing: normal;
+
 
   border-radius: 4px;
   color: var(--gray-950);
@@ -66,20 +67,20 @@ body {
 
 .card-publish-date {
   font-family: "Figtree", sans-serif;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 500;
   line-height: 150%;
-  letter-spacing: normal;
+
 
   color: var(--gray-950);
 }
 
 .card-title {
   font-family: "Figtree", sans-serif;
-  font-size: 20px;
+  font-size: 1.375rem;
   font-weight: 800;
   line-height: 150%;
-  letter-spacing: normal;
+
 
   color: var(--gray-950);
 
@@ -88,9 +89,8 @@ body {
 
 .card-description {
   font-family: "Figtree", sans-serif;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 150%;
-  letter-spacing: normal;
 
   color: var(--gray-500);
 }
@@ -100,36 +100,36 @@ body {
   justify-content: start;
   align-items: center;
 
-  margin-top: 24px;
+  margin-top: 1.5rem;
 }
 
 .card-author img {
   width: 2rem;
-  margin-right: 12px;
+  margin-right: 0.75rem;
 }
 
 .card-author span {
   font-family: "Figtree", sans-serif;
-  font-size: 14px;
+  font-size: 0.875;
   font-weight: 800;
   line-height: 150%;
-  letter-spacing: normal;
+
   color: var(--gray-950);
 }
 
 @media screen and (min-width: 1025px) {
   .card-container {
-    width: 384px;
+    width: 24rem;
   }
 
   .card-category,
   .card-publish-date,
   .card-description {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .card-title {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 
   .card-title:hover {
